@@ -1,3 +1,8 @@
+Mon Jul 16 11:32:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py: Check for KeyError when getting a
+	  slot number for a range restriction, too.
+
 Mon Jul 16 11:18:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py: Check for KeyError when accessing
